--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -6,4 +6,4 @@ log4j.appender.A1=org.apache.log4j.ConsoleAppender
 
 # A1 uses PatternLayout.
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
-log4j.appender.A1.layout.ConversionPattern================================================%n[%-5p] - %m%n[%-5p] - %M%n
+log4j.appender.A1.layout.ConversionPattern================================================%n[%-5p] - %m%n[%-5p]
